1.2vcli Panellet:

* Added MrProbe class. This thread stands during the execution to gather information of the run
	- New class added MrProbe
	- New package org.meandre.core.engine.probes added
		* This package contains different implementations of the probe mechanisms
		* NullProbeImpl discards all the information
		* ToPrintStreamProbreImpl diverts all the info as text to the provided print stream

* Added cacheRefresh to the add/remove location services

* Modified the ComponentContextProperties to provide getFlowID function [Feb 16th 2008 by Amit Kumar]
	-Added the function implementation in ComponentContextImpl/Wrapped*Required/Conductor and WrappedComponents
	- This distinguishes getFlowID/getFlowExecutionID

* Modified the /services/repository/add and /services/repository/add_flow services
	- Added overwrite flag (if true overwrites the component/flow descriptor)
	- Added dump flag (if true dumps the repository after the requested modifications using the same format of requested modifications)

* Modified the ConductorTest to include the Python component.

* Added a Python component to the demo set
	- The component just turns a string to upper case (named To Uppercase)

* Modified the conductor to run embedded Python/Jython components
	- Python scripts are embedded contexts
	- Location should point to the component base URI
	- Multiple contexts (scripts can be attached)
	- There is no guarante about the order of scripts execution

* Passed the embedding test using the upgraded (see updates ExecutableContext) E2K demo components
	- Test demo and traditional context URIs work (Fixed a typo on the connector URI convention)
	- Test with all the embedded components

* (!!) Updated ExecutableContext. This change will break all components so far
	- initialize() changed to initialize(ComponentContextProperties ccp)
	- dispose() changed to dispose(ComponentContextPropoerties ccp)

* Root the ComponentContext in to the root interface ComponentContextProperties